# core-c-helloWorld

./: CMakeLists.txt  README.md  helloWorldInterface.h  helloWorldProvider.c  helloWorldRequestor.c
